# maxminddb-writer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
create-ip2country-db/: Cargo.toml
create-ip2country-db/src/: main.rs
maxminddb-writer/: Cargo.toml  README.md
maxminddb-writer/src/: lib.rs  node.rs  paths.rs  serializer.rs
src/: data.rs  lib.rs  metadata.rs  paths.rs  serializer.rs
