[package]
name = "maxminddb-writer"
version = "0.1.0"
edition = "2021"
description = "Library for writing MaxMind DB"
keywords = ["MaxMind", "GeoIP2", "GeoIP", "geolocation", "ip"]
categories = ["database", "network-programming"]
authors = ["Kuba Jaroszewski <jakub.jaroszewski@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/create-ip2country-db.rs"
name = "create-ip2country-db"
features = ["ip2country"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

# Optional dependencies for ip2country
anyhow = { version = "1.0", optional = true }
log = { version = "0.4.17", optional = true }
maxminddb = { version = "0.23", optional = true }
reqwest = { version = "0.11", features = ["stream"], optional = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"], optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
maxminddb = "0.23"

[features]
default = ["ip2country"]
ip2country = ["anyhow", "log", "futures-util", "maxminddb", "reqwest", "tokio", "tokio-util"]
